# moon-media-lab

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
assets/voices/: README.md
config/: engines.yaml
docs/: agent-handoff.md  architecture.md  cli-v1-spec.md  core-workflows.zh-CN.md  engine-adapter-spec.md  knowledge-assets.md  knowledge-visualization-workflow.md  open-source-engineering.md  platform-support.md  product-brief.md  roadmap.md  runtime-and-models.md  voice-assets-workflow.md  voice-plugin-migration.md
examples/: sample.txt
src/moon_media_lab/: __init__.py  cli.py  errors.py  jobs.py  models_cli.py  paths.py  schema.py
src/moon_media_lab/asr/: __init__.py  base.py  registry.py
src/moon_media_lab/asr/engines/: __init__.py  faster_whisper.py  mock.py  paraformer.py  sensevoice.py
src/moon_media_lab/assets/: __init__.py  voices.py
src/moon_media_lab/knowledge/: __init__.py  bundle.py  wiki.py
src/moon_media_lab/llm/: base.py  cli_runner.py  registry.py
src/moon_media_lab/llm/providers/: claude_cli.py  codex_cli.py  gemini_cli.py  mock.py
src/moon_media_lab/media/: __init__.py  douyin.py  downloader.py  resolver.py
src/moon_media_lab/pipelines/: playlist.py  process.py  subtitles.py  transcribe.py
src/moon_media_lab/plugins/: __init__.py  voice.py
src/moon_media_lab/postproc/: prompts.py  runner.py
src/moon_media_lab/tts/: base.py  registry.py  video_case.py
src/moon_media_lab/tts/engines/: __init__.py  edge.py  mock.py
src/moon_media_lab/web/: server.py
src/moon_media_lab/web/static/: index.html
tests/: conftest.py  test_cut_plan.py  test_downloader.py  test_knowledge_bundle.py  test_lifecycle_cli.py  test_merge_and_batches.py  test_pipeline_mock.py  test_postproc.py  test_registry.py  test_subtitles.py  test_tts_video_case.py  test_web.py
