[project]
name = "moon-media-lab"
version = "0.0.7"
description = "Local-first media to transcript, knowledge, and voice lab."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
asr-sensevoice = ["funasr", "modelscope", "torch", "torchaudio", "soundfile"]
asr-whisper = ["faster-whisper"]
url = ["yt-dlp"]
tts-edge = ["edge-tts"]
dev = ["pytest", "ruff"]

[project.scripts]
moon-media = "moon_media_lab.cli:main"

[tool.ruff]
line-length = 100
