[project]
name = "moon-media-lab"
version = "0.1.5"
description = "Local-first media lab: audio/video/online media to transcripts, subtitles, knowledge notes, and voice."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["asr", "transcription", "whisper", "sensevoice", "diarization", "yt-dlp", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.optional-dependencies]
asr-sensevoice = ["funasr", "modelscope", "torch", "torchaudio", "soundfile"]
asr-whisper = ["faster-whisper"]
url = ["yt-dlp"]
tts-edge = ["edge-tts"]
web = ["fastapi", "uvicorn", "python-multipart"]
dev = ["pytest", "ruff", "httpx"]

[project.scripts]
moon-media = "moon_media_lab.cli:main"

[tool.setuptools.package-data]
"moon_media_lab.web" = ["static/*.html"]

[tool.ruff]
line-length = 100
