[project]
name = "moon-media-lab"
version = "0.2.1"
description = "Local-first media knowledge lab: audio/video/online media to evidence-linked transcripts, knowledge bundles, reports, and Wiki exports."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []
keywords = ["asr", "transcription", "knowledge", "wiki", "whisper", "sensevoice", "diarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.optional-dependencies]
asr-sensevoice = ["funasr", "modelscope", "torch", "torchaudio", "soundfile"]
asr-whisper = ["faster-whisper"]
url = ["yt-dlp"]
tts-edge = ["edge-tts"]
tts-qwen3-mlx = [
    "mlx-audio>=0.4.5; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "soundfile>=0.13",
]
web = ["fastapi", "uvicorn", "python-multipart"]
dev = ["pytest", "ruff", "httpx", "numpy", "soundfile"]

[project.scripts]
moon-media = "moon_media_lab.cli:main"
moon-media-voice-case = "moon_media_lab.tts.video_case:main"

[tool.setuptools.package-data]
"moon_media_lab.web" = ["static/*.html"]

[tool.ruff]
line-length = 100
